--- a/quiz/index.html
+++ b/quiz/index.html
@@ -108,7 +108,7 @@
         document.getElementById("p3").classList.remove("hide")
       }
       function next4() {
-        location.href="https://anacarolina.website" // SEU LINK AQUI
+        location.href="https://anacarolina3.website" // SEU LINK AQUI
       }
     </script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
