--- a/quiz/index.html
+++ b/quiz/index.html
@@ -43,6 +43,7 @@
   s.parentNode.insertBefore(t,s)}(window, document,'script',
   'https://connect.facebook.net/en_US/fbevents.js');
   fbq('init', '776398636722148');
+  fbq('init', '584784409957177');
   fbq('track', 'AddToCart');
 </script>
 <noscript><img height="1" width="1" style="display:none"
